fixed spacing issue

--- a/public/style/less/courses.less
+++ b/public/style/less/courses.less
@@ -242,12 +242,14 @@
             max-height: 400px;
             overflow: hidden;
             width: 100%;
-            
             p{
                 a{
                     color: @lightblueColor;
                     font-weight: 600;
                 }
+            }
+            h2,h4{
+                margin-bottom: 1rem;
             }
         }
         .toggle {
@@ -266,7 +268,7 @@
                 padding-left: 1.4rem;
                 position: relative;
                 z-index: 1;
-                margin-top: 1rem;
+                margin-bottom: 1rem;
                 &::before {
                     content: '';
                     z-index: -1;
