--- a/public/style/main.css
+++ b/public/style/main.css
@@ -1191,6 +1191,67 @@ input[type=number] {
 ::-webkit-scrollbar-thumb:hover {
   background: #0064D8;
 }
+.scene {
+  width: 100%;
+  height: 100%;
+  perspective: 600;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: none;
+  align-items: center;
+  justify-content: center;
+}
+.scene svg {
+  width: 240px;
+  height: 240px;
+}
+.dc-logo {
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+}
+.dc-logo:hover svg {
+  transform-origin: 50% 50%;
+  animation: arrow-spin 2.5s 0s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
+}
+.dc-logo:hover:hover:before {
+  content: '\2764';
+  padding: 6px;
+  font: 10px/1 Monaco, sans-serif;
+  font-size: 10px;
+  color: #00fffe;
+  text-transform: uppercase;
+  position: absolute;
+  left: -70px;
+  top: -30px;
+  white-space: nowrap;
+  z-index: 20px;
+  box-shadow: 0px 0px 4px #222;
+  background: rgba(0, 0, 0, 0.4);
+}
+.dc-logo:hover:hover:after {
+  content: 'Digital Craft';
+  padding: 6px;
+  font: 10px/1 Monaco, sans-serif;
+  font-size: 10px;
+  color: #6E6F71;
+  text-transform: uppercase;
+  position: absolute;
+  right: 0;
+  top: -30px;
+  white-space: nowrap;
+  z-index: 20px;
+  box-shadow: 0px 0px 4px #222;
+  background: rgba(0, 0, 0, 0.4);
+  background-image: none;
+}
+@keyframes arrow-spin {
+  50% {
+    transform: rotateY(360deg);
+  }
+}
 @media (min-width : 768px) {
   .buttons .btn-blue,
   .buttons .btn-white {
@@ -8618,6 +8679,10 @@ input[type=number] {
   color: #0064D8;
   font-weight: 600;
 }
+.foundation .tab-common .overview-content h2,
+.foundation .tab-common .overview-content h4 {
+  margin-bottom: 1rem;
+}
 .foundation .tab-common .toggle {
   max-height: 100% !important;
   transition: all 0.3s ease-in, color 0s ease-in-out;
@@ -8631,7 +8696,7 @@ input[type=number] {
   padding-left: 1.4rem;
   position: relative;
   z-index: 1;
-  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 .foundation .tab-common ul li::before {
   content: '';
@@ -9858,7 +9923,7 @@ input[type=number] {
     justify-content: flex-start;
   }
   .foundation .included-content {
-    width: 20%;
+    width: 22%;
     margin-bottom: 0;
     margin-right: 1.5rem;
   }
